testsuite/tests/polykinds/T7151.hs
module T7151 where

type Foo = [Int, String]
